--- a/bootstrap-5.3.3-dist/css/bootstrap.css
+++ b/bootstrap-5.3.3-dist/css/bootstrap.css
@@ -3953,7 +3953,7 @@ textarea.form-control-lg {
 .navbar {
   --bs-navbar-padding-x: 0;
   --bs-navbar-padding-y: 0.5rem;
-  --bs-navbar-color: rgba(255, 255, 255, .5);
+  --bs-navbar-color: rgba(255, 255, 255, 1);
   --bs-navbar-hover-color: rgba(var(--bs-emphasis-color-rgb), 0.8);
   --bs-navbar-disabled-color: rgba(var(--bs-emphasis-color-rgb), 0.3);
   --bs-navbar-active-color: rgba(var(--bs-emphasis-color-rgb), 1);
