--- a/style.css
+++ b/style.css
@@ -23,6 +23,8 @@
 .gov-logo--container{
     width: 50%;
     margin: 0 auto;
+    display: flex;
+    justify-content: center;
 }
 
 .gov-logo{width: 75%}
@@ -91,7 +93,7 @@
 @media (max-width:576px) {
     *{font-size: 1.06066rem}
 
-    .container{padding: 2em 1em}
+    .container{padding: 1em}
 
     .d-none{display: none}
 
