--- a/css/portal.css
+++ b/css/portal.css
@@ -30,24 +30,27 @@ p{margin-bottom: 0}
 .ag-logo{width: 15%}
 .footer-logo{width: 20%}
 
-.nav-link{
-    color: #fff;
-    font-size: 1rem;
-    text-decoration: none;
-}
-
-.nav-link:hover{color:rgba(255, 255, 255, .5)}
-
 .description,
-.footer-text{
+.footer-text,
+.user-text p+p{
     color: var(--clr-dark-gray);
-    font-size: .8rem;
+    font-size: .9rem;
 }
 
 .gov-logo--container{width: 50%}
 .gov-logo{width: 75%}
 
-.a11y-button{
+.user-text{line-height: 1rem;}
+
+.bi-person-fill{
+    color: #fff;
+    background-color: var(--clr-blue-primary);
+    padding: .2em .4em;
+    border-radius: 50%;
+}
+
+.a11y-button,
+.filter-btn{
     color: #fff;
     border: none;
     border-radius: 4px;
@@ -56,7 +59,11 @@ p{margin-bottom: 0}
     box-shadow: 0 2px 2px rgba(0, 0, 0, .5);
 }
 
-.a11y-button:hover{opacity: .9}
+.filter-btn{
+    background-color: var(--clr-blue-primary);}
+
+.a11y-button:hover,
+.filter-btn:hover{opacity: .8}
 
 .bi-search{
     position: absolute;
