--- a/css/dam.css
+++ b/css/dam.css
@@ -1,3 +1,19 @@
-.filter-btn{
-    border: none;
+.tributos__section{
+    height: 400px;
+    border: 1px solid #DCDCDC;
+    border-radius: 8px;
+}
+
+.tributos-footer p, span{
+    font-size: .8rem;
+}
+
+@media (min-width: 992px) {
+    .tributos__section{
+        height: 600px;
+    }
+
+    .tributos-footer p, span{
+        font-size: 1rem;
+    }
 }
