--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@
     --clr-yellow:#FEBB01;
     --clr-light-gray:#DCDCDC;
     --clr-dark-gray:#636363;
+    --clr-white: #fff;
 }
 
 body{
@@ -30,7 +31,7 @@ body{
 }
 
 .section__head a{
-    color: #fff;
+    color: var(--clr-white);
     text-decoration: none;
 }
 
@@ -77,6 +78,8 @@ body{
 
 .forms-footer{justify-content: space-between}
 
+input::placeholder{font-size: 1rem}
+
 .section-btn{
     flex-direction: column;
     padding: 1.25em 0;
@@ -84,7 +87,7 @@ body{
 }
 
 .btn{
-    color: #fff;
+    color: var(--clr-white);
     background-color: var(--clr-blue-primary);
     text-decoration: none;
     border-radius: 16px;
@@ -100,7 +103,7 @@ body{
 }
 
 .voltar{
-    background-color: #fff;
+    background-color: var(--clr-light-gray);
     color: var(--clr-blue-primary);
     border: 1px solid var(--clr-blue-primary);
 }
@@ -169,7 +172,7 @@ body{
     }
 
     .section__head p{
-        color: #fff;
+        color: var(--clr-white);;
         font-size: 1.5rem;
     }
 
