--- a/css/portal.css
+++ b/css/portal.css
@@ -36,7 +36,6 @@ p{margin-bottom: 0}
 .gov-logo--container{width: 50%}
 .gov-logo{width: 75%}
 .user-text{line-height: 1rem}
-.user-name{font-size: 1.125rem}
 
 .user-btn{
     background-color: var(--clr-blue-primary);
@@ -55,6 +54,10 @@ p{margin-bottom: 0}
     list-style: none;
     padding: 0;
     margin: 0;
+}
+
+.popover-list li:hover{
+    opacity: .8;
 }
 
 .popover-list li + li{
