--- a/css/dam.css
+++ b/css/dam.css
@@ -65,6 +65,12 @@ footer{
     bottom: 0;
 }
 
+@media (max-height:768px) {
+    .tributos__section{
+        height: 450px;
+    }
+}
+
 @media (min-width: 992px) {
     .tributos__section{
         height: 600px;
