--- a/css/portal.css
+++ b/css/portal.css
@@ -36,6 +36,7 @@ p{margin-bottom: 0}
 .gov-logo--container{width: 50%}
 .gov-logo{width: 75%}
 .user-text{line-height: 1rem}
+.user-name{font-size: 1rem;}
 
 .user-btn{
     background-color: var(--clr-blue-primary);
@@ -78,7 +79,7 @@ p{margin-bottom: 0}
     cursor: pointer;
 }
 
-.a11y-button, .filter-btn{
+.a11y-button, .filter-btn, .pay-btn{
     color: var(--clr-white);
     border: none;
     border-radius: 4px;
@@ -87,11 +88,11 @@ p{margin-bottom: 0}
     box-shadow: 0 2px 2px rgba(0, 0, 0, .5);
 }
 
-.filter-btn{
+.filter-btn, .pay-btn{
     background-color: var(--clr-blue-primary);
 }
 
-.a11y-button:hover, .filter-btn:hover{opacity: .8}
+.a11y-button:hover, .filter-btn:hover, .pay-btn:hover{opacity: .8}
 
 .bi-search{
     position: absolute;
