--- a/css/dam.css
+++ b/css/dam.css
@@ -1,19 +1,9 @@
-.tributos__section{
-    height: 300px;
-    border: 1px solid #DCDCDC;
-    border-radius: 8px;
-}
-
-.tributos-footer p, span{
-    font-size: .8rem;
-}
-
 .sidebar{
     position: absolute;
     top: 0;
     transform: translateX(-100%);
 
-    background-color: var(--clr-blue-primary);
+    background-color: #022C90;
     z-index: 1;
     height: 100%;
     transition: 1s;
@@ -66,15 +56,20 @@
     display: grid;
     grid-template-columns: 1fr;
     text-align: center;
+    height: 300px;
+    border: 1px solid #DCDCDC;
+    border-radius: 8px;
 }
 
 .tributos-title{
+    color: var(--clr-text);
     padding: .5em;
     border-bottom: 2px solid white;
 }
 
 .tributos__section p{
     margin-bottom: .5em;
+    color: var(--clr-text);
 }
 
 footer{
@@ -82,20 +77,24 @@ footer{
     bottom: 0;
 }
 
+.tributos-footer p, span{
+    font-size: .8rem;
+    color: var(--clr-text);
+}
+
 @media (min-width: 992px) and (min-height: 600px){
     .tributos__section{
         grid-template-columns: 2fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
         overflow-y: hidden;
         overflow-x: hidden;
-        height:320px;
     }
-
+    
     .tributos-footer p, span{
         font-size: 1rem;
     }
 }
 
-@media (min-width: 1200px) and (min-height: 888px){
+@media (min-width: 1200px) or (min-height: 935px){
     .tributos__section{
         height: 600px;
     }
