--- a/css/portal.css
+++ b/css/portal.css
@@ -9,26 +9,27 @@
 }
 
 :root{
-    --clr-blue-primary:#022C90;
-    --clr-blue-secondary:#2765D9;
-    --clr-yellow:#FEBB01;
-    --clr-light-gray:#d9d9d9;
-    --clr-dark-gray:#636363;
-    --clr-text: #212529;
+    --border:#D9D9D9;
     --bg-light: #fafafa;
+    --text-blue: #022C90;
+    --text-dark: #212529;
+    --text-gray:#636363;
+    --clr-yellow:#FEBB01;
+    --clr-blue-primary:#022C90;
 }
 
 .dark-mode:root{
-    --clr-blue-primary: #FEBB01;
-    --clr-light-gray: #636363;
-    --clr-dark-gray: #FEBB01;
-    --bg-light: #212529;
-    --clr-text: #febb01;
+    --border: #555;
+    --text-dark: #febb01;
+    --text-blue: #febb01;
+    --text-gray: #febb01;
+    --bg-light: #121212;
+    --clr-blue-primary: #000;
 }
 
 body{background-color: var(--bg-light)}
 
-header{background-color: #022C90}
+header{background-color: var(--clr-blue-primary)}
 
 p{margin-bottom: 0}
 
@@ -37,7 +38,7 @@ p{margin-bottom: 0}
     justify-content: space-between;
 }
 
-.description, .footer-text, .msg{color: var(--clr-dark-gray)}
+.description, .footer-text, .msg{color: var(--text-gray)}
 
 .ag-logo{width: 15%}
 
@@ -48,21 +49,21 @@ p{margin-bottom: 0}
 .footer-logo{width: 20%}
 
 .user-text{
-    color: var(--clr-text);
+    color: var(--text-dark);
     line-height: 1rem;
 }
 
 .user-name{font-size: 1rem;}
 
 .user-btn{
-    background-color: #022C90;
+    background-color: var(--clr-blue-primary);
     padding: .25em .5em;
     border-radius: 50%;
     border: none;
 }
 
 .user-popover{
-    --bs-popover-bg: #022C90;
+    --bs-popover-bg: var(--clr-blue-primary);
     --bs-popover-body-color: #fff;
 }
 
@@ -98,7 +99,7 @@ p{margin-bottom: 0}
     box-shadow: 0 2px 2px rgba(0, 0, 0, .5);
 }
 
-.filter-btn, .pay-btn{background-color: #022C90}
+.filter-btn, .pay-btn{background-color: var(--clr-blue-primary)}
 
 .a11y-button:hover, .filter-btn:hover, .pay-btn:hover{opacity: .8}
 
@@ -107,14 +108,14 @@ p{margin-bottom: 0}
     top: 55%;
     right: 4%;
     transform: translateY(-50%);
-    color: var(--clr-text);
+    color: #ccc;
 }
 
 .search-box{margin: 1em 0}
 
 #input-tributos{
     background-color: var(--bg-light);
-    border: 2px solid var(--clr-light-gray);
+    border: 2px solid var(-border-gray);
     border-radius: 16px;
     padding: .75em 1em;
 }
@@ -123,13 +124,13 @@ p{margin-bottom: 0}
 
 #input-busca{
     background-color: var(--bg-light);
-    border: 2px solid var(--clr-light-gray);
+    border: 2px solid var(--border);
     border-radius: 16px;
     padding: .75em 1em;
     width: 100%
 }
 
-input::placeholder{color: var(--clr-text);}
+input::placeholder, input:focus{color: var(--text-gray)}
 
 #input-busca:focus, #input-busca:hover, #input-tributos:focus, #input-tributos:hover{
     outline: none;
@@ -140,7 +141,7 @@ input::placeholder{color: var(--clr-text);}
 
 .grid-title{
     font-size: 1.35rem;
-    color: var(--clr-blue-primary);
+    color: var(--text-blue);
 }
 
 .grid__section{
@@ -152,11 +153,11 @@ input::placeholder{color: var(--clr-text);}
 .grid-item{
     padding: 1em;
     text-align: center;
-    border: 1px solid var(--clr-light-gray);
+    border: 1px solid var(--border);
     border-radius: 16px;
     background-color: var(--bg-light);
     box-shadow: 0 2px 4px rgba(0, 0, 0, .25);
-    color: var(--clr-text);
+    color: var(--text-dark);
 }
 
 .grid-item:hover{
@@ -169,9 +170,7 @@ footer{
     width: 100%;
 }
 
-.footer-text{
-    font-size: .9rem;
-}
+.footer-text{font-size: .9rem}
 
 .a11y-modal{
     position: fixed;
