--- a/style.css
+++ b/style.css
@@ -8,21 +8,26 @@
 }
 
 :root{
-    --clr-blue-primary:#022C90;
-    --clr-blue-secondary:#2765D9;
-    --clr-yellow:#FEBB01;
-    --border:#DCDCDC;
+    --border:#D9D9D9;
     --bg-light: #fafafa;
+    --text-blue: #022C90;
+    --text-dark: #212529;
     --text-gray:#636363;
-    --clr-text: #212529;
+    --clr-yellow:#FEBB01;
+    --clr-blue-primary:#022C90;
+    --btn-blue: #022C90;
+    --btn-text: #fff;
 }
 
 .dark-mode:root{
-    --clr-blue-primary: #FEBB01;
-    --clr-light-gray: #636363;
-    --text-gray: #FEBB01;
-    --bg-light: #212529;
-    --clr-text: #febb01;
+    --border: #ababab;
+    --btn-blue: #febb01;
+    --btn-text: #000;
+    --text-dark: #ababab;
+    --text-blue: #febb01;
+    --text-gray: #ababab;
+    --bg-light: #121212;
+    --clr-blue-primary: #000;
 }
 
 body{
@@ -32,7 +37,7 @@ body{
 
 .row{display: flex}
 
-.section__head{background-color: #022C90}
+.section__head{background-color: var(--clr-blue-primary)}
 
 .section__head a{
     color: #fff;
@@ -60,19 +65,19 @@ body{
     margin: 0 auto 1em;
     display: flex;
     justify-content: center;
-    background-color: #fff;
+    background-color: #fafafa;
 }
 
 .gov-logo{width: 75%}
 
 .forms-title{
-    color: var(--clr-text);
+    color: var(--text-dark);
     font-weight: 400;
     text-align: center;
 }
 
 label,
-.forms-main p{color: var(--clr-text);}
+.forms-main p{color: var(--text-dark)}
 
 .forms-main{margin-top: 1em}
 
@@ -82,6 +87,7 @@ label,
     width: 100%;
     padding: 1.25em;
     border-radius: 16px;
+    color: var(--text-dark);
     background-color: var(--bg-light);
     border: 2px solid var(--border);
 }
@@ -89,7 +95,7 @@ label,
 .forms-main form input:focus,
 .forms-main form input:active{
     outline: none;
-    border: 2px solid #022C90;
+    border: 2px solid var(--btn-blue);
 }
 
 .forms-footer{justify-content: space-between}
@@ -103,8 +109,8 @@ input::placeholder{font-size: 1rem}
 }
 
 .btn{
-    color: #fff;
-    background-color: #022C90;
+    color: var(--btn-text);
+    background-color: var(--btn-blue);
     text-decoration: none;
     border-radius: 16px;
     padding: .75em 0;
@@ -136,12 +142,12 @@ input::placeholder{font-size: 1rem}
 }
 
 .voltar{
-    background-color: #fff;
-    color: #022C90;
-    border: 1px solid #022C90;
+    background-color: var(--bg-light);
+    color: var(--text-dark);
+    border: 1px solid var(--text-dark);
 }
 
-.anchor{color: var(--clr-blue-primary)}
+.anchor{color: var(--text-blue)}
 
 
 .section-footer p{
