--- a/css/dam.css
+++ b/css/dam.css
@@ -3,15 +3,13 @@
     top: 0;
     transform: translateX(-100%);
 
-    background-color: #022C90;
+    background-color: var(--clr-blue-primary);
     z-index: 1;
     height: 100%;
     transition: 1s;
 }
 
-.show-sidebar{
-    transform: translateX(0);
-}
+.show-sidebar{transform: translateX(0)}
 
 .curtain{
     position: absolute;
@@ -27,18 +25,14 @@
     transform: translateX(0);
 }
 
-.bi-x-lg{
-    color: #fff;
-}
+.bi-x-lg{color: #fff}
 
 .close-btn{
     background-color: transparent;
     border: none;
 }
 
-.aside-title, .list-title{
-    color: var(--clr-yellow);
-}
+.aside-title, .list-title{color: var(--clr-yellow)}
 
 .aside-list{
     color: #fff;
@@ -46,9 +40,7 @@
     padding: 0;
 }
 
-.aside-list li{
-    margin-top: .5em;
-}
+.aside-list li{margin-top: .5em}
 
 .tributos__section{
     overflow-y: scroll;
@@ -64,7 +56,7 @@
 .tributos-title{
     color: var(--text-dark);
     padding: .5em;
-    border-bottom: 2px solid white;
+    border-bottom: 1px solid white;
 }
 
 .tributos__section p{
@@ -82,19 +74,28 @@ footer{
     color: var(--text-dark);
 }
 
-@media (min-width: 992px) and (min-height: 600px){
+@media (min-width: 992px) and (min-height: 600px) {
     .tributos__section{
-        grid-template-columns: 2fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+        grid-template-columns: repeat(8, 1fr);
         overflow-y: hidden;
         overflow-x: hidden;
+        height: 350px;
     }
-    
+
     .tributos-footer p, span{
         font-size: 1rem;
     }
 }
 
-@media (min-width: 1200px) or (min-height: 935px){
+@media (min-height: 768px){
+    .tributos__section{
+        height: 450px;
+    }
+
+    
+}
+
+@media (min-width: 1200px) and (min-height: 935px){
     .tributos__section{
         height: 600px;
     }
