--- a/css/index.css
+++ b/css/index.css
@@ -7,28 +7,33 @@
     font-family: "Rubik", sans-serif;
 }
 
+html{background-color: #2765D9}
+
 body{
-    font-size: 1rem;
-    height: 100vh;
-    padding: 1em;
+    height: 100dvh;
     background: linear-gradient(to bottom, #2765D9 0%, #022C90 100%);
 }
 
-.content a{text-decoration: none;}
-
-.content p{
-    position: absolute;
-    bottom: 0;
-    left: 50%;
-    transform: translateY(-50%);
-
-    color: #fff;
-    margin: 1em;
+.content{
+    padding: 1em;
 }
 
 .ag-logo{
-    width: 10vw;
-    max-width: 100px;
+    width: 60px;
+}
+
+.content h1, p{
+    color: #fff;
+    margin-top: 2rem;
+    font-weight: 400;
+}
+
+.content h1{
+    font-size: 3.25rem;
+}
+
+.content p{
+    font-size: 2rem;
 }
 
 .btn{
@@ -36,17 +41,18 @@ body{
     bottom: 0;
     right: 0;
 
+
     display: flex;
     align-items: center;
-    gap: .5em;
+    gap: 2em;
 
+    background-color: #febb01;
     color: #fff;
     width: fit-content;
-    padding: .5em 0;
+    padding: .5em .75em;
+    border-radius: 16px;
     margin: 1em;
-    border-bottom: 2.5px solid #fff;
 }
-
 
 .btn:hover{
     opacity: .5;
