--- a/css/index.css
+++ b/css/index.css
@@ -11,7 +11,7 @@ html{background-color: #2765D9}
 
 body{
     height: 100dvh;
-    font-size: 2.5rem;
+    font-size: 1.5rem;
     background: linear-gradient(to bottom, #2765D9 0%, #022C90 100%);
 }
 
@@ -47,6 +47,10 @@ body{
     margin: 1em;
 }
 
-.btn:hover{
-    opacity: .5;
+.btn:hover{opacity: .5}
+
+@media (min-width: 768px) {
+    body{
+        font-size: 2.5rem;
+    }
 }
