--- a/css/portal.css
+++ b/css/portal.css
@@ -188,10 +188,6 @@ input::placeholder, input:focus{color: var(--text-gray)}
     cursor: pointer;
 }
 
-footer{
-    width: 100%;
-}
-
 .footer-text, .msg{font-size: .9rem}
 
 @media (min-width: 768px) and (min-height: 600px){
@@ -206,6 +202,14 @@ footer{
         width: 50%;
         margin: 0;
     }
+
+    footer{
+        position: absolute;
+        bottom: 0;
+        left: 50%;
+        transform: translateX(-50%);
+    }
+
 }
 
 @media (min-width: 1200px) and (min-height: 800px){
